--- a/docs/develop/node/gettingstarted/index-gettingstarted.mdx
+++ b/docs/develop/node/gettingstarted/index-gettingstarted.mdx
@@ -15,6 +15,8 @@ Find tutorials, examples and technical articles that will help you to develop wi
 
 ## Introduction
 
+Redis is an open source, in-memory, key-value data store most commonly used as a primary database, cache, message broker, and queue. Redis cache delivers sub-millisecond response times, enabling fast and powerful real-time applications in industries such as gaming, fintech, ad-tech, social media, healthcare, and IoT.
+
 Redis is a great database for use with Node. Both Redis and Node share similar type conventions and threading models, which makes for a very predictable development experience. By pairing Node and Redis together you can achieve a scalable and productive development platform.
 
 Redis has two primary Node clients which are [node-redis](https://github.com/redis/node-redis) and [ioredis](https://github.com/luin/ioredis). Both are available through npm. We generally suggest using node-redis, as it has wide support for Redis modules, is easily extended, and is widely used. 
@@ -35,7 +37,7 @@ This article shows how to get started with the recommended libraries: [node-redi
 #### Step 1. Run a Redis server
 
 You can either run Redis in a Docker container or directly on your Mac OS.
-Follow the below commands to setup a Redis server locally:
+Follow the below command line to setup a Redis server locally:
 
 
 ```
@@ -44,7 +46,7 @@ Follow the below commands to setup a Redis server locally:
 ```
 
 :::info INFO
-Redis Stack unifies and simplifies the developer experience of the leading Redis modules and the capabilities they provide. Redis Stack bundles five Redis modules: RedisJSON, RedisSearch, RedisGraph, RedisTimeSeries, and RedisBloom.
+Redis Stack unifies and simplifies the developer experience of the leading Redis data store, modules and the capabilities they provide. Redis Stack bundles five Redis modules: RedisJSON, RedisSearch, RedisGraph, RedisTimeSeries, and RedisBloom.
 [Learn more](/create/redis-stack)
 :::
 
@@ -55,8 +57,9 @@ Ensure that you are able to use the following Redis command to connect to the Re
  redis-cli -h localhost -p 6379
  localhost>
 ```
-
-#### Step 2. Install node-redis using `npm` (or `yarn`)
+Now you should be able to perform CRUD operation with Redis keys. 
+The above redis client command might require password if you have setup authentication in your redis configuration file. Refer [Redis Command Reference](https://redis.io/commands/)
+#### Step 2. Install node redis using `NPM` (or `YARN`)
 
 Run the following NPM command line to install Redis client.
 
@@ -66,6 +69,8 @@ Run the following NPM command line to install Redis client.
 
 
 #### Step 2. Write your Application Code
+
+Use the following sample code for our Nodejs application:
 
 ```javascript
 import { createClient } from 'redis';
