--- a/docs/create/heroku/portal/index-heroku.mdx
+++ b/docs/create/heroku/portal/index-heroku.mdx
@@ -56,7 +56,7 @@ For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise
 
 [Follow this link to create a Redis Enterprise Cloud](/create/rediscloud) subscription and database. Once you create the database, you will be provisioned with a unique database endpoint URL, port and password. Save these for future reference.
 
-Before you proceed with heroku redis , ensure that you can connect to Redis instance and verify if it is accessible via redis-cli command. You can run `info` command that is available in redis client software to see the version, memory usage, stats, and modules enabled in Redis cloud database.
+Before you proceed with heroku redis, ensure that you can connect to Redis instance and verify if it is accessible via redis-cli command. You can run `info` command that is available in redis client software to see the version, memory usage, stats, and modules enabled in the Redis cloud database.
 
 #### Step 2. Create a Heroku account
 
