--- a/docs/create/heroku/portal/index-heroku.mdx
+++ b/docs/create/heroku/portal/index-heroku.mdx
@@ -109,7 +109,7 @@ Run the commands below to get a functioning Git repository that contains a simpl
 
 #### Step 6. Setting up environment variables
 
-[Follow this link to create a Redis Enterprise Cloud](/create/rediscloud) subscription and database connection as shown below: Go to the Heroku dashboard, click "Settings" and set Redis URL and REDIS_PASSWORD under the Config Vars.(Please note that the Redis URL endpoint is unique and might be different in your case. Please enter the values accordingly)
+[Follow this link to create a Redis Enterprise Cloud](/create/rediscloud) subscription and database connection as shown below: Go to the Heroku dashboard, click "Settings" and set `REDIS_URL` and `REDIS_PASSWORD` under the Config Vars. (Please note that the Redis URL endpoint is unique and might be different in your case. Please enter the values accordingly)
 
 Refer to [Step 1](/create/heroku/portal#step-1-create-redis-enterprise-cloud) for the correct values to use.
 
