--- a/docs/develop/golang/index-golang.mdx
+++ b/docs/develop/golang/index-golang.mdx
@@ -158,7 +158,7 @@ You can connect to Redis server using the below redis client command:
  redis-cli -p 6379
 ```
 
-The above command will make a connection to Redis server. It will then  return a prompt that allows you to run redis command and get some data value.
+The above command will make a connection to the Redis server. It will then present a prompt that allows you to run Redis commands.
 
 
 #### Step 2. Initialise the Go Module
