--- a/docs/develop/ruby/index-ruby.mdx
+++ b/docs/develop/ruby/index-ruby.mdx
@@ -46,7 +46,7 @@ Redis Stack unifies and simplifies the developer experience of the leading Redis
 Ensure that you are able to use the following Redis command to connect to the Redis instance.
 
 ```bash
- redis-cli -h localhost -p 6379
+ redis-cli
  localhost>
 ```
 
