--- a/docs/develop/ruby/index-ruby.mdx
+++ b/docs/develop/ruby/index-ruby.mdx
@@ -50,7 +50,7 @@ Ensure that you are able to use the following Redis command to connect to the Re
  127.0.0.1:6379>
 ```
 
-Now you should be able to perform CRUD operation with Redis commands. For example, you can insert data to Redis via SET command and the fetch it via GET command. The above redis client command might require password if you have setup authentication in your redis configuration file. If Redis password is not set, then you can connect to Redis instance flawlessly. Be default, Redis uses the port 6379 that can be modified in the redis configuration file.
+Now you should be able to perform CRUD operations with Redis commands. For example, you can insert data to Redis with the `SET` command and the fetch it with the `GET` command. The above Redis client command might require a password if you have setup authentication in your Redis configuration file. By default, Redis listens on port 6379.  This can be modified in the Redis configuration file.
 
 ### Step 2. Clone the repository
 
