--- a/docs/howtos/hackernews/index-hackernews.mdx
+++ b/docs/howtos/hackernews/index-hackernews.mdx
@@ -38,7 +38,7 @@ Redis Cloud is a fully-managed cloud service for hosting and running your Redis 
 
 
 
-[Follow this link](../create/rediscloud) to create Redis Enterprise Cloud account with 2 databases - one with RedisJSON module and other with RediSearch(search database) module enabled. Please note that under Free subscription, only one module can be enabled. If you want to create 2 databases, then you might need to create 2 different subscriptions.
+[Follow this link](../create/rediscloud) to create a Redis Enterprise Cloud account with 2 databases - one with the RedisJSON module and other with RediSearch (full-text search and secondary indexing) module enabled. 
 
 Save the database endpoint URL and password for our future reference
 
