--- a/docs/develop/golang/index-golang.mdx
+++ b/docs/develop/golang/index-golang.mdx
@@ -152,7 +152,7 @@ Redis is an open source, in-memory, key-value data store most commonly used as a
  docker run -d -p 6379:6379 redislabs/redismod
 ```
 
-You can connect to Redis server using the below redis client command:
+You can connect to Redis server using the `redis-cli` command like this:
 
 ```
  redis-cli -p 6379
