--- a/docs/develop/golang/index-golang.mdx
+++ b/docs/develop/golang/index-golang.mdx
@@ -155,7 +155,7 @@ Redis is an open source, in-memory, key-value data store most commonly used as a
 You can connect to Redis server using the `redis-cli` command like this:
 
 ```
- redis-cli -p 6379
+ redis-cli
 ```
 
 The above command will make a connection to the Redis server. It will then present a prompt that allows you to run Redis commands.
