--- a/docs/develop/golang/index-golang.mdx
+++ b/docs/develop/golang/index-golang.mdx
@@ -163,7 +163,7 @@ The above command will make a connection to the Redis server. It will then prese
 
 #### Step 2. Initialise the Go Module
 
-In order to connect to the redis instance and return some data value, first you need to initialize the Go module as shown:
+In order to connect to the Redis instance and return some data value, first you need to initialize the Go module as shown:
 
 ```bash
  go mod init github.com/my/repo
