--- a/docs/develop/golang/index-golang.mdx
+++ b/docs/develop/golang/index-golang.mdx
@@ -177,7 +177,7 @@ In order to connect to the Redis instance and return some data value, first you 
 
 #### Step 4. Create a main.go file 
 
-Let us create a main.go file and write the following code to check for your redis instance connection
+Let us create a `main.go` file and write the following code to check for your Redis instance connection
 
 
 
