--- a/docs/develop/golang/index-golang.mdx
+++ b/docs/develop/golang/index-golang.mdx
@@ -211,7 +211,7 @@ func main() {
  go run main.go
 ```
 
-By now, the Go application should successfully connect to the Redis instance and return data value (a successful PONG response).
+By now, the Go application should successfully connect to the Redis instance and return data value (a successful "PONG" response).
 
 
  </TabItem>
