--- a/docs/develop/node/gettingstarted/index-gettingstarted.mdx
+++ b/docs/develop/node/gettingstarted/index-gettingstarted.mdx
@@ -37,7 +37,7 @@ This article shows how to get started with the recommended libraries: [node-redi
 #### Step 1. Run a Redis server
 
 You can either run Redis in a Docker container or directly on your Mac OS.
-Follow the below command line to setup a Redis server locally:
+Use the following commands to setup a Redis server locally:
 
 
 ```
