--- a/docs/develop/node/gettingstarted/index-gettingstarted.mdx
+++ b/docs/develop/node/gettingstarted/index-gettingstarted.mdx
@@ -54,7 +54,7 @@ Redis Stack unifies and simplifies the developer experience of the leading Redis
 Ensure that you are able to use the following Redis command to connect to the Redis instance.
 
 ```bash
- redis-cli -h localhost -p 6379
+ redis-cli
  localhost>
 ```
 Now you should be able to perform CRUD operation with Redis keys. 
