--- a/docs/develop/node/gettingstarted/index-gettingstarted.mdx
+++ b/docs/develop/node/gettingstarted/index-gettingstarted.mdx
@@ -57,7 +57,7 @@ Ensure that you are able to use the following Redis command to connect to the Re
  redis-cli
  localhost>
 ```
-Now you should be able to perform CRUD operation with Redis keys. 
+Now you should be able to perform CRUD operations with Redis keys. 
 The above redis client command might require password if you have setup authentication in your redis configuration file. Refer [Redis Command Reference](https://redis.io/commands/)
 #### Step 2. Install node redis using `NPM` (or `YARN`)
 
