--- a/docs/develop/node/gettingstarted/index-gettingstarted.mdx
+++ b/docs/develop/node/gettingstarted/index-gettingstarted.mdx
@@ -58,7 +58,7 @@ Ensure that you are able to use the following Redis command to connect to the Re
  localhost>
 ```
 Now you should be able to perform CRUD operations with Redis keys. 
-The above redis client command might require password if you have setup authentication in your redis configuration file. Refer [Redis Command Reference](https://redis.io/commands/)
+The above Redis client command might require password if you have setup authentication in your Redis configuration file. Refer [Redis Command Reference](https://redis.io/commands/)
 #### Step 2. Install node redis using `NPM` (or `YARN`)
 
 Run the following NPM command line to install Redis client.
