--- a/docs/develop/node/gettingstarted/index-gettingstarted.mdx
+++ b/docs/develop/node/gettingstarted/index-gettingstarted.mdx
@@ -61,7 +61,7 @@ Now you should be able to perform CRUD operations with Redis keys.
 The above Redis client command might require password if you have setup authentication in your Redis configuration file. Refer [Redis Command Reference](https://redis.io/commands/)
 #### Step 2. Install node redis using `NPM` (or `YARN`)
 
-Run the following NPM command line to install Redis client.
+Run the following NPM command to install the Redis client.
 
   ```bash
     npm install redis
