--- a/docs/develop/node/gettingstarted/index-gettingstarted.mdx
+++ b/docs/develop/node/gettingstarted/index-gettingstarted.mdx
@@ -70,7 +70,7 @@ Run the following NPM command to install the Redis client.
 
 #### Step 2. Write your Application Code
 
-Use the following sample code for our Nodejs application:
+Use the following sample code for our Node.js application:
 
 ```javascript
 import { createClient } from 'redis';
