--- a/docs/develop/php/index-php.mdx
+++ b/docs/develop/php/index-php.mdx
@@ -26,7 +26,7 @@ Redis is an open source, in-memory, key-value data store most commonly used as a
 
 #### Step 1. Run a Redis server
 
-You can either run Redis server in a Docker container or directly on your Mac OS. Follow the below command to setup a Redis server locally:
+You can either run Redis server in a Docker container or directly on your machine. Follow the below command to setup a Redis server locally on Mac OS:
 
 ```
  brew tap redis-stack/redis-stack
