--- a/docs/develop/php/index-php.mdx
+++ b/docs/develop/php/index-php.mdx
@@ -81,7 +81,7 @@ if ($redis->ping()) {
 ?>
 ```
 
-Replace the following values with those of your database and save this file as connect.php
+Replace the following values with those of your database and save this file as `connect.php`.
 
 ### Step 5. Executing the script
 
