--- a/docs/develop/python/fastapi/index-fastapi.mdx
+++ b/docs/develop/python/fastapi/index-fastapi.mdx
@@ -75,7 +75,7 @@ RedisTimeSeries is a source available Redis Module that adds a timeseries data t
 
 You can get started by following the [setup instructions](https://oss.redis.com/redistimeseries/#setup) in the RedisTimeSeries documentation.
 
-However, note that this tutorial's example project configures RedisTimeSeries automatically for you with the redismod Docker image. You can even use docker compose to build up your Redis server.
+However, note that this tutorial's example project configures RedisTimeSeries automatically for you with the redismod Docker image. You can even use Docker Compose to build up your Redis server.
 
 ## An Asyncio Primer
 
