--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -15,7 +15,7 @@ Find tutorials, examples and technical articles that will help you to develop wi
 
 ### Getting Started
 
-The Python community has built many client libraries that you can find here . For your first steps with Python and Redis, this article will show how to use the recommended library: [redis py](https://github.com/redis/redis-py)
+The Python community has built many client libraries that you can find here . For your first steps with Python and Redis, this article will show how to use the recommended library: [redis-py](https://github.com/redis/redis-py)
 
 
 <Tabs
