--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -31,7 +31,7 @@ The Python community has built many client libraries that you can find here . Fo
 Redis is an open source, in-memory, key-value data store most commonly used as a primary database, cache, message broker, and queue. Unlike relational databases, Redis database delivers sub-millisecond response times, enabling fast and powerful real-time applications in industries such as gaming, fintech, ad-tech, social media, healthcare, and IoT.
 
 Redis (also called remote dictionary server) is a multi-model database, and provides several built-in data structures/data type such as Lists, Hashes, Geospatial indexes, Strings, Sets etc.
-You can either run Redis server in a Docker container or directly on your Mac OS. Follow the below command line to setup a Redis server locally:
+You can either run Redis server in a Docker container or directly on your machine. Follow the below command line to setup a Redis server on Mac OS:
 
 
 ```
