--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -44,7 +44,7 @@ Redis Stack unifies and simplifies the developer experience of the leading Redis
 [Learn more](/create/redis-stack)
 :::
 
-Ensure that you are able to use the following Redis command to connect to the default Redis instance.
+Ensure that you are able to use the following Redis command to connect to the Redis instance.
 
 
 ```bash
