--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -48,7 +48,7 @@ Ensure that you are able to use the following Redis command to connect to the Re
 
 
 ```bash
- redis-cli -h localhost -p 6379
+ redis-cli
  localhost>
 ```
 
