--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -52,7 +52,7 @@ Ensure that you are able to use the following Redis command to connect to the Re
  127.0.0.1:6379>
 ```
 
-Now, you should be able to get Redis data by using the redis commands.
+Now, you should be able to get Redis data by using Redis commands.
 
 ### Step 2. Install the Redis client library using `pip`
 
