--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -56,7 +56,7 @@ Now, you should be able to get Redis data by using Redis commands.
 
 ### Step 2. Install the Redis client library using `pip`
 
-The below Python code allows you to connect to the default Redis server instance .
+The following Python code allows you to connect to the default Redis server instance .
 
 
    ```bash
