--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -83,7 +83,7 @@ The following Python code allows you to connect to the default Redis server inst
     print(vehicles)
    ```
 
-Find more information about Redis database instance & Redis connections in the "[Redis Connect](https://github.com/redis-developer/redis-connect/tree/master/python/redispy)".
+Find more information about Redis database instances & Redis connections in the "[Redis Connect](https://github.com/redis-developer/redis-connect/tree/master/python/redispy)".
 
  </TabItem>
 </Tabs>
