--- a/docs/develop/ruby/index-ruby.mdx
+++ b/docs/develop/ruby/index-ruby.mdx
@@ -29,7 +29,7 @@ Redis is an open source, in-memory, key-value data store most commonly used as a
 #### Step 1. Run a Redis server
 
 You can either run Redis in a Docker container or directly on your machine.
-Follow the below commands to setup a Redis server locally:
+Follow the below commands to setup a Redis server on Mac OS:
 
 
 ```
